--- a/RandomEngine.vcxproj
+++ b/RandomEngine.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Game\Object\RectangleObject.cpp" />
     <ClCompile Include="RandomEngine\API\Application.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\Circle.cpp" />
+    <ClCompile Include="RandomEngine\API\Graphics\CircleDrawer.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\Sprite.cpp" />
     <ClCompile Include="RandomEngine\API\Math\Math.cpp" />
     <ClCompile Include="RandomEngine\API\Math\Smoother.cpp" />
@@ -168,6 +169,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game\Level.hpp" />
+    <ClInclude Include="Game\Object\CircleObject.hpp" />
     <ClInclude Include="Game\Object\Group.hpp" />
     <ClInclude Include="Game\Object\ProcessGroup.hpp" />
     <ClInclude Include="Game\Level\Part.hpp" />
@@ -180,8 +182,11 @@
     <ClInclude Include="RandomEngine\API\Auxiliary\print_vectors.hpp" />
     <ClInclude Include="RandomEngine\API\Graphics\Camera.hpp" />
     <ClInclude Include="RandomEngine\API\Graphics\Circle.hpp" />
+    <ClInclude Include="RandomEngine\API\Graphics\CircleDrawer.hpp" />
+    <ClInclude Include="RandomEngine\API\Graphics\Object.hpp" />
     <ClInclude Include="RandomEngine\API\Graphics\Sprite.hpp" />
     <ClInclude Include="RandomEngine\API\Math.hpp" />
+    <ClInclude Include="RandomEngine\API\Math\color.hpp" />
     <ClInclude Include="RandomEngine\API\Math\Interpolation.hpp" />
     <ClInclude Include="RandomEngine\API\Math\Smoother.hpp" />
     <ClInclude Include="RandomEngine\API\Math\Trig.hpp" />
@@ -190,6 +195,7 @@
     <ClInclude Include="RandomEngine\API\Resource\TextureLoader.hpp" />
     <ClInclude Include="RandomEngine\API\System\Mouse.hpp" />
     <ClInclude Include="RandomEngine\API\System\types.hpp" />
+    <ClInclude Include="RandomEngine\API\Tests\CircleTests.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RandomEngine\API\Graphics\Camera.cpp" />
