--- a/RandomEngine.vcxproj.filters
+++ b/RandomEngine.vcxproj.filters
@@ -3,25 +3,21 @@
   <ItemGroup>
     <ClCompile Include="Game\main.cpp" />
     <ClCompile Include="RandomEngine\API\Application.cpp" />
-    <ClCompile Include="RandomEngine\API\Math\Math.cpp" />
-    <ClCompile Include="RandomEngine\API\Graphics\Circle.cpp" />
+    <ClCompile Include="RandomEngine\API\Math\Functions.cpp" />
     <ClCompile Include="RandomEngine\API\System\Mouse.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\Sprite.cpp" />
     <ClCompile Include="RandomEngine\API\Resource\ResourceLoader.cpp" />
     <ClCompile Include="RandomEngine\API\Resource\TextureLoader.cpp" />
     <ClCompile Include="Game\Object\RectangleObject.cpp" />
-    <ClCompile Include="RandomEngine\API\Math\Smoother.cpp" />
-    <ClCompile Include="RandomEngine\API\Graphics\CircleDrawer.cpp" />
+    <ClCompile Include="RandomEngine\API\Graphics\VertexObject.cpp" />
+    <ClCompile Include="RandomEngine\API\Graphics\Shape.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RandomEngine\API\Application.hpp" />
     <ClInclude Include="RandomEngine\API\Graphics\Camera.hpp" />
     <ClInclude Include="RandomEngine\API\Math.hpp" />
     <ClInclude Include="RandomEngine\API\Math\vec2.hpp" />
-    <ClInclude Include="RandomEngine\API\Math\Trig.hpp" />
-    <ClInclude Include="RandomEngine\API\Graphics\Circle.hpp" />
     <ClInclude Include="RandomEngine\API\System\types.hpp" />
-    <ClInclude Include="RandomEngine\API\Math\Interpolation.hpp" />
     <ClInclude Include="RandomEngine\API\Auxiliary\DEBUG.hpp" />
     <ClInclude Include="RandomEngine\API\Auxiliary\print_vectors.hpp" />
     <ClInclude Include="RandomEngine\API\System\Mouse.hpp" />
@@ -36,12 +32,14 @@
     <ClInclude Include="Game\Level\Part.hpp" />
     <ClInclude Include="Game\Object\ProcessGroup.hpp" />
     <ClInclude Include="Game\Object\Group.hpp" />
-    <ClInclude Include="RandomEngine\API\Math\Smoother.hpp" />
     <ClInclude Include="Game\Object\CircleObject.hpp" />
     <ClInclude Include="RandomEngine\API\Math\color.hpp" />
-    <ClInclude Include="RandomEngine\API\Graphics\CircleDrawer.hpp" />
-    <ClInclude Include="RandomEngine\API\Tests\CircleTests.hpp" />
+    <ClInclude Include="RandomEngine\API\Tests\ShapeTests.hpp" />
     <ClInclude Include="RandomEngine\API\Graphics\Object.hpp" />
+    <ClInclude Include="RandomEngine\API\Math\Functions.hpp" />
+    <ClInclude Include="RandomEngine\API\Graphics\VertexObject.hpp" />
+    <ClInclude Include="RandomEngine\API\Graphics\Shape.hpp" />
+    <ClInclude Include="RandomEngine\API\Tests\Assert.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RandomEngine\API\Graphics\Camera.cpp" />
