--- a/RandomEngine.vcxproj
+++ b/RandomEngine.vcxproj
@@ -155,28 +155,39 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Game\Collision\CollisionArea.cpp" />
+    <ClCompile Include="Game\IGameObject.cpp" />
+    <ClCompile Include="Game\Level.cpp" />
+    <ClCompile Include="Game\Level\Bound.cpp" />
     <ClCompile Include="Game\main.cpp" />
-    <ClCompile Include="Game\Object\RectangleObject.cpp" />
+    <ClCompile Include="Game\Object.cpp" />
+    <ClCompile Include="Game\Object\SpriteObject.cpp" />
+    <ClCompile Include="Game\Player.cpp" />
     <ClCompile Include="RandomEngine\API\Application.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\Shape.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\Sprite.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\VertexObject.cpp" />
+    <ClCompile Include="RandomEngine\API\Math\color.cpp" />
     <ClCompile Include="RandomEngine\API\Math\Functions.cpp" />
     <ClCompile Include="RandomEngine\API\Resource\ResourceLoader.cpp" />
     <ClCompile Include="RandomEngine\API\Resource\TextureLoader.cpp" />
     <ClCompile Include="RandomEngine\API\System\Mouse.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Game\Collision\CollisionArea.hpp" />
+    <ClInclude Include="Game\IGameObject.hpp" />
     <ClInclude Include="Game\Level.hpp" />
-    <ClInclude Include="Game\Object\CircleObject.hpp" />
+    <ClInclude Include="Game\Level\Bound.hpp" />
     <ClInclude Include="Game\Object\Group.hpp" />
     <ClInclude Include="Game\Object\ProcessGroup.hpp" />
     <ClInclude Include="Game\Level\Part.hpp" />
     <ClInclude Include="Game\Object.hpp" />
-    <ClInclude Include="Game\Object\RectangleObject.hpp" />
+    <ClInclude Include="Game\Object\SpriteObject.hpp" />
     <ClInclude Include="Game\Object\VertexObject.hpp" />
     <ClInclude Include="Game\Player.hpp" />
     <ClInclude Include="RandomEngine\API\Application.hpp" />
+    <ClInclude Include="Game\Collision\RectangleArea.hpp" />
+    <ClInclude Include="Game\Collision\StaticBody.hpp" />
     <ClInclude Include="RandomEngine\API\Tests\Assert.hpp" />
     <ClInclude Include="RandomEngine\API\Auxiliary\DEBUG.hpp" />
     <ClInclude Include="RandomEngine\API\Auxiliary\print_vectors.hpp" />
