--- a/RandomEngine.vcxproj
+++ b/RandomEngine.vcxproj
@@ -78,6 +78,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>$(SolutionDir)^build\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)^build\$(Platform)\$(Configuration)\~\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
