--- a/RandomEngine.vcxproj
+++ b/RandomEngine.vcxproj
@@ -90,11 +90,12 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>D:\libs\SFML-2.5.1\include</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>RandomEngine\API\System\types.hpp;%(ForcedIncludeFiles)</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\libs\SFML-2.5.1\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\libs\SFML-2.5.1\lib;$(SolutionDir)\packages\boost_json-vc142.1.77.0.0\lib\native;$(SolutionDir)\packages\boost_container-vc142.1.78.0\lib\native</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics-s-d.lib;sfml-window-s-d.lib;sfml-system-s-d.lib;opengl32.lib;freetype.lib;winmm.lib;gdi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -125,13 +126,14 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);SFML_STATIC</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>D:\libs\SFML-2.5.1\include;D:\Alorfa\Kод\new_С++\RandomEngine;D:\libs\boost_1_75_0</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\libs\SFML-2.5.1\include;$(SolutionDir);D:\libs\boost_1_75_0</AdditionalIncludeDirectories>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <ForcedIncludeFiles>RandomEngine\API\System\types.hpp;%(ForcedIncludeFiles)</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\libs\SFML-2.5.1\lib;D:\libs\boost_1_75_0\libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\libs\SFML-2.5.1\lib;$(SolutionDir)\packages\boost_json-vc142.1.77.0.0\lib\native;$(SolutionDir)\packages\boost_container-vc142.1.78.0\lib\native</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics-s-d.lib;sfml-window-s-d.lib;sfml-system-s-d.lib;opengl32.lib;freetype.lib;winmm.lib;gdi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -200,6 +202,7 @@
     <ClInclude Include="Game\Collision\RectangleArea.hpp" />
     <ClInclude Include="Game\Collision\StaticBody.hpp" />
     <ClInclude Include="RandomEngine\API\Resource\File.hpp" />
+    <ClInclude Include="RandomEngine\API\Resource\JsonLoader.hpp" />
     <ClInclude Include="RandomEngine\API\System\Keyboard.hpp" />
     <ClInclude Include="RandomEngine\API\Tests\Assert.hpp" />
     <ClInclude Include="RandomEngine\API\Auxiliary\DEBUG.hpp" />
@@ -225,14 +228,16 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="packages\boost.1.77.0.0\build\boost.targets" Condition="Exists('packages\boost.1.77.0.0\build\boost.targets')" />
-    <Import Project="packages\boost_json-vc142.1.77.0.0\build\boost_json-vc142.targets" Condition="Exists('packages\boost_json-vc142.1.77.0.0\build\boost_json-vc142.targets')" />
+    <Import Project="packages\boost.1.78.0\build\boost.targets" Condition="Exists('packages\boost.1.78.0\build\boost.targets')" />
+    <Import Project="packages\boost_json-vc142.1.78.0\build\boost_json-vc142.targets" Condition="Exists('packages\boost_json-vc142.1.78.0\build\boost_json-vc142.targets')" />
+    <Import Project="packages\boost_container-vc142.1.78.0\build\boost_container-vc142.targets" Condition="Exists('packages\boost_container-vc142.1.78.0\build\boost_container-vc142.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>Данный проект ссылается на пакеты NuGet, отсутствующие на этом компьютере. Используйте восстановление пакетов NuGet, чтобы скачать их.  Дополнительную информацию см. по адресу: http://go.microsoft.com/fwlink/?LinkID=322105. Отсутствует следующий файл: {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\boost.1.77.0.0\build\boost.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\boost.1.77.0.0\build\boost.targets'))" />
-    <Error Condition="!Exists('packages\boost_json-vc142.1.77.0.0\build\boost_json-vc142.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\boost_json-vc142.1.77.0.0\build\boost_json-vc142.targets'))" />
+    <Error Condition="!Exists('packages\boost.1.78.0\build\boost.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\boost.1.78.0\build\boost.targets'))" />
+    <Error Condition="!Exists('packages\boost_json-vc142.1.78.0\build\boost_json-vc142.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\boost_json-vc142.1.78.0\build\boost_json-vc142.targets'))" />
+    <Error Condition="!Exists('packages\boost_container-vc142.1.78.0\build\boost_container-vc142.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\boost_container-vc142.1.78.0\build\boost_container-vc142.targets'))" />
   </Target>
 </Project>
