--- a/RandomEngine.vcxproj
+++ b/RandomEngine.vcxproj
@@ -164,6 +164,8 @@
     <ClCompile Include="Game\Collision\CollisionArea.cpp" />
     <ClCompile Include="Game\Level\LevelLoader.cpp" />
     <ClCompile Include="Game\Player\GameMode.cpp" />
+    <ClCompile Include="Game\Scenes\MainMenu.cpp" />
+    <ClCompile Include="RandomEngine\API\GlobalData.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\Camera.cpp" />
     <ClCompile Include="RandomEngine\API\Math\CollisionFunctions.cpp" />
     <ClCompile Include="Game\IGameObject.cpp" />
@@ -191,7 +193,9 @@
     <ClInclude Include="Game\Level\LevelLoader.hpp" />
     <ClInclude Include="Game\Level\LevelState.hpp" />
     <ClInclude Include="Game\Player\GameMode.hpp" />
+    <ClInclude Include="Game\Scenes\MainMenu.hpp" />
     <ClInclude Include="Game\Settings.hpp" />
+    <ClInclude Include="RandomEngine\API\GlobalData.hpp" />
     <ClInclude Include="RandomEngine\API\Math\CollisionFunctions.hpp" />
     <ClInclude Include="RandomEngine\API\Math\RepulsionResult.hpp" />
     <ClInclude Include="Game\IGameObject.hpp" />
